[package]
name = "tasky"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
chrono = { version = "0.4.41", features = ["serde"] }
csv = "1.3.1"
dotenvy = "0.15.7"
governor = "0.10.0"
nonzero_ext = "0.3.0"
serde = "1.0.219"
sqlx = { version = "0.8.5", features = [
    "postgres",
    "runtime-async-std",
    "chrono",
] }
tokio = { version = "1.45.0", features = ["full"] }
